update mobile theme

--- a/resume/index.html
+++ b/resume/index.html
@@ -85,7 +85,8 @@
         <div class="home">
 
 
-    <div class="col col-12">
+    <div class="col col-12 box">
+        <div class="ribbon"><span>Resume</span></div>
         <div class="col col-3">
             <div class="block glass" style="">
                 <div class="block-body">
@@ -110,15 +111,15 @@
     </div>
     <div class="col col-12">
 
-        <div class="col col-6">
-
+        <div class="col col-6 box">
+            <div class="ribbon"><span>CommSkill</span></div>
             <div id="commonSkills" style="width: 100%;height:420px;"></div>
             <script type="text/javascript" src="/assets/commonSkill.js">
 
             </script>
         </div>
-        <div class="col col-6">
-
+        <div class="col col-6 box">
+            <div class="ribbon"><span>TechSkill</span></div>
             <div id="techSkills" style="width: 100%;height:450px;"></div>
             <script type="text/javascript" src="/assets/techSkill.js">
 
