--- a/resume/index.html
+++ b/resume/index.html
@@ -109,22 +109,25 @@
             </div>
         </div>
     </div>
-    <div class="col col-12">
-
-        <div class="col col-6 box">
-            <div class="ribbon"><span>CommSkill</span></div>
-            <div id="commonSkills" style="width: 100%;height:420px;"></div>
-            <script type="text/javascript" src="/assets/commonSkill.js">
-
-            </script>
+    <div class="col col-12 box">
+        <div class="ribbon"><span>Skills</span></div>
+        <div class="col col-6 ">
+            <div class="block glass" style="">
+                <div id="techSkills" style="width: 100%;height:450px;"></div>
+                <script type="text/javascript" src="/assets/techSkill.js">
+                </script>
+            </div>
         </div>
-        <div class="col col-6 box">
-            <div class="ribbon"><span>TechSkill</span></div>
-            <div id="techSkills" style="width: 100%;height:450px;"></div>
-            <script type="text/javascript" src="/assets/techSkill.js">
+        <div class="col col-6 ">
 
-            </script>
+            <div class="block glass" style="">
+                <div id="commonSkills" style="width: 100%;height:450px;"></div>
+
+                <script type="text/javascript" src="/assets/commonSkill.js">
+                </script>
+            </div>
         </div>
+
     </div>
 
     <div class="col col-12 box">
